--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 flask
 folium
 boto3
-git+https://github.com/ozgur/python-firebase
+#git+https://github.com/ozgur/python-firebase
 pandas
+pyrebase
+plotly
